Fix layout issues for anchor link

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -57,5 +57,9 @@
 .content {
   flex: 1;
   overflow-y: auto;
-  padding-top: 60px;
+  margin-top: 60px;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
 }
