--- a/src/app/home/body-section/body-section.component.scss
+++ b/src/app/home/body-section/body-section.component.scss
@@ -35,6 +35,7 @@ $blur-value: 3px;
     width: 250px;
     height: 200px;
     align-items: center;
+    border-radius: 20px;
 
     animation: fadein 2s;
 
