--- a/src/app/home/download-it-section/download-it-section.component.scss
+++ b/src/app/home/download-it-section/download-it-section.component.scss
@@ -31,7 +31,6 @@ $blur-value: 3px;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 5px;
     max-width: 400px;
     align-items: center;
     margin-right: 10px;
